// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryLabel should render a QueryLabel component 1`] = `
<div>
  <span
    class="query-index svelte-1ylxfod"
  >
    1
  </span>
   
  <div
    class="query-label svelte-1ylxfod"
  />
</div>
`;

exports[`QueryLabel should render a QueryLabel component without a row number 1`] = `
<div>
   
  <div
    class="query-label svelte-1ylxfod"
  />
</div>
`;
